Concluded first fase of software
Get all game results from websites and save into database.

--- a/Totoloto/App.config
+++ b/Totoloto/App.config
@@ -5,7 +5,10 @@
 		<add name ="Totolotoconnectionstring" connectionString ="Data Source=.\SQLEXPRESS;Database=Totoloto;Integrated Security=sspi;Trusted_Connection=True;TrustServerCertificate=True;" />
 	</connectionStrings>
 	<appSettings>
+		<!--Dados para carregamento inicial-->
 		<add key="BaseUrl" value="https://www.resultados-euromilhoes.com/" />
 		<add key="Pages" value="resultados-totoloto-2011.html|resultados-totoloto-2011-2.html|resultados-totoloto-2012.html|resultados-totoloto-2012-2.html|resultados-totoloto-2013.html|resultados-totoloto-2013-2.html|resultados-totoloto-2014.html|resultados-totoloto-2014-2.html|resultados-totoloto-2015.html|resultados-totoloto-2015-2.html|resultados-totoloto-2016.html|resultados-totoloto-2016-2.html|resultados-totoloto-2017.html|resultados-totoloto-2017-2.html|resultados-totoloto-2018-2.html|resultados-totoloto-2019.html|resultados-totoloto-2020.html|resultados-totoloto-2021.html|resultados-totoloto-2022.html|resultados-totoloto-2023.html|resultados-totoloto.html|resultados-totoloto-2.html" />
+		<!--Dados para atualização semanal-->
+		<add key="UrlByDate" value="https://www.jogoselotaria.com/resultados-totoloto.php?del-dia=" />
 	</appSettings>
 </configuration>
